syntax = "proto3";
package inventory;
option go_package = "./proto";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    string category_id = 6;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 stock = 4;
    string category_id = 6;
}

message CreateProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    string category_id = 6;
}

message UpdateProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}

message ListProductsRequest {
    string category_id = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}

message CheckStockRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message CheckStockResponse {
    bool available = 1;
}

message UpdateStockRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message UpdateStockResponse {
    bool success = 1;
}

service InventoryService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}